tests/baselines/reference/stringLiteralsWithSwitchStatements04.errors.txt
tests/cases/conformance/types/literal/stringLiteralsWithSwitchStatements04.ts(7,10): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/conformance/types/literal/stringLiteralsWithSwitchStatements04.ts(9,10): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/conformance/types/literal/stringLiteralsWithSwitchStatements04.ts(11,10): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/conformance/types/literal/stringLiteralsWithSwitchStatements04.ts(11,10): error TS2678: Type '"baz"' is not comparable to type '"foo" | "bar"'.
tests/cases/conformance/types/literal/stringLiteralsWithSwitchStatements04.ts(13,10): error TS2695: Left side of comma operator is unused and has no side effects.


==== tests/cases/conformance/types/literal/stringLiteralsWithSwitchStatements04.ts (5 errors) ====
    let x: "foo";
    let y: "foo" | "bar"; 
    
    declare function randBool(): boolean;
    
    switch (y) {
        case "foo", x:
             ~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
            break;
        case x, "foo":
             ~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
            break;
        case x, "baz":
             ~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
             ~~~~~~~~
!!! error TS2678: Type '"baz"' is not comparable to type '"foo" | "bar"'.
            break;
        case "baz", x:
             ~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
            break;
        case "baz" && "bar":
            break;
        case "baz" && ("foo" || "bar"):
            break;
        case "bar" && ("baz" || "bar"):
            break;
    }
    